Regester and unregester problem fixed